# advent-2020

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.cache/clangd/index/: Config.h.1863080AD178F1BB.idx  main.cpp.03B67470CF4CA730.idx
day01/: advent-2020  day01  main.cpp  test_soln.txt
include/: Config.h.in
src/: main.cpp
